--- a/web/index.html
+++ b/web/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OpenConvert - File Converter</title>
+    <title>File Format Converter</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>OpenConvert</h1>
+            <h1>File Format Converter</h1>
             <p>Local-First Open Source File Converter</p>
         </header>
 
