Parse the spreadsheet data

--- a/web/index.html
+++ b/web/index.html
@@ -24,8 +24,9 @@
                     </svg>
                     <p>Drag & Drop files here</p>
                     <p class="hint">or click to browse</p>
+                    <p class="hint supported-formats">Supported: .xlsx (Excel files)</p>
                 </div>
-                <input type="file" id="fileInput" multiple style="display: none;">
+                <input type="file" id="fileInput" multiple accept=".xlsx,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" style="display: none;">
             </div>
 
             <!-- File List -->
